--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,14 @@
 [package]
 name = "rusty-mail-server"
+description = "An email server, written in Rust"
+repository = "https://github.com/MarkGhebrial/rusty-mail-server"
+license = "MIT"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[workspace]
+members = ["pop3", "mailbox"]
 
 [dependencies]
-tokio = { version = "1", features = ["full"] }
-bytes = "1"
-mailparse = "0.13.8"
+pop3 = { path = "pop3" }
+mailbox = { path = "mailbox" }
