--- a/database/Cargo.toml
+++ b/database/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2021"
 
 [dependencies]
 bytes = "1"
+email_address = "0.2.3"
+argon2 = "0.4.1"
+rand_core = { version = "0.6", features = ["std"] } # For salt generation
+tokio-postgres = "0.7.7"
+tokio = { version = "1", features = ["full"] }
