--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ argon2 = "0.4.1"
 rand_core = { version = "0.6", features = ["std"] } # For salt generation
 tokio-postgres = "0.7.7"
 lazy_static = "1.4.0"
+log4rs = "1.1.1"
+log = "0.4.17"
