--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ bytes = "1"
 email_address = "0.2.3"
 argon2 = "0.4.1"
 rand_core = { version = "0.6", features = ["std"] } # For salt generation
+sea-orm = { version = "0.11.0", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
 tokio-postgres = "0.7.7"
 lazy_static = "1.4.0"
 log4rs = "1.1.1"
