--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ trust-dns-resolver = { version = "0.22.0", features = [ "tokio-runtime" ] }
 lazy_static = "1.4.0"
 log4rs = "1.1.1"
 log = "0.4.17"
+instant-acme = "0.7.2"
