--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,5 @@ trust-dns-resolver = { version = "0.22.0", features = [ "tokio-runtime" ] }
 lazy_static = "1.4.0"
 log4rs = "1.1.1"
 log = "0.4.17"
+nom = "8.0.0" 
+abnf-core = "0.6.0"
