--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,6 @@ rand_core = { version = "0.6", features = ["std"] } # For salt generation
 sea-orm = { version = "0.11.0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] } # Object relational model
 trust-dns-resolver = { version = "0.22.0", features = [ "tokio-runtime" ] } # DNS query resolution
 lazy_static = "1.4.0" # Initialization of static variables
-# log4rs = "1.1.1"
 log = "0.4.17" # Logging macros
 fern = "0.7.1" # Logging framework
 nom = "8.0.0" # Parser combinators
@@ -27,6 +26,4 @@ sudo = "0.6.0" # Privilege execution so that mailroom can bind to ports lower th
 clap = "4.5.40" # Command line argument parsing
 ratatui = "0.29.0" # TUI framework
 crossterm = "0.29.0" # Terminal events (key presses, mouse movement, etc.)
-# humantime = "2.2.0"
-colored = "3.0.0"
-chrono = "0.4.41"
+chrono = "0.4.41" # Date and time formatting
